2010-03-30  Sam Weinig  <sam@webkit.org>

        Reviewed by Anders Carlsson.

        Add missing export.

        * WebCore.base.exp:

2010-03-30  Enrica Casucci  <enrica@apple.com>

        Reviewed by Darin Adler.

        Incorrect insertion position after typing THAI CHARACTER SARA AM = 0E33.
        <rdar://problem/7810749>
        https://bugs.webkit.org/show_bug.cgi?id=36858

        Test: fast/text/multiglyph-characters.html

        Characters with multiple glyph were not supported correctly.
        Computing the advance width was producing a division by zero.
        
        * platform/graphics/mac/ComplexTextController.cpp:
        (WebCore::ComplexTextController::advance):

2010-03-30  Chris Evans  <cevans@chromium.org>

        Reviewed by Adam Barth.

        Taint the canvas if an SVG-derived pattern is rendered into it.

        https://bugs.webkit.org/show_bug.cgi?id=36838

        Test: fast/canvas/svg-taint.html

        * html/canvas/CanvasRenderingContext2D.cpp:
        (WebCore::CanvasRenderingContext2D::createPattern):
          Take into account the image's hasSingleSecurityOrigin() property.

2010-03-30  Alexey Proskuryakov  <ap@apple.com>

        Reviewed by Darin Adler.

        https://bugs.webkit.org/show_bug.cgi?id=36616
        Dvorak-Qwerty keyboard layout gives unexpected results in javascript keydown

        https://bugs.webkit.org/show_bug.cgi?id=36797
        For non-Roman layouts, keydown Event.keyCode is always 0

        * platform/cocoa/KeyEventCocoa.mm:
        (WebCore::windowsKeyCodeForKeyCode): This is now the primary function for determining
        Windows key code - there is no reason to round trip a virtual key code via character code to
        get Windows virtual key code, and this can't work for non-Roman alphabets.
        (WebCore::windowsKeyCodeForCharCode): Removed keys that are now handled in windowsKeyCodeForKeyCode(),
        only keeping those for which we don't have known key codes (yet?).
