@@ -396,3 +396,8 @@ void LayoutTestController::setSpatialNavigationEnabled(bool)
 {
 
 }
+
+bool LayoutTestController::callShouldCloseOnWebView()
+{
+    return false;
+}
